# TheHillsHaveAIs

./: README.md
deploy/: init_gpu_node.sh  init_gpu_node_digital_ocean.sh
rag/: README.md  pyproject.toml
rag/rag/: main.py  passwords.txt
